FIX - button-list spacing - fix working local but not at cms

--- a/src/assets/toolkit/styles/5-objects/_objects.buttons.scss
+++ b/src/assets/toolkit/styles/5-objects/_objects.buttons.scss
@@ -247,6 +247,7 @@
   .button-list {
     .button {
         margin-bottom: 0.3em;
+        margin-right: 0.3em;
     }
 
     span {
